[tool.poetry]
name = "tap-gong"
version = "0.2.0"
description = "`tap-gong` is a Singer tap for Gong, built with the Meltano SDK for Singer Taps."
authors = ["Stephen Bailey", "Adam Hacker", "Alexa Steiner"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "*"
singer-sdk = "*"
simpleeval = "*"
python-dateutil = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.poetry.scripts]
# CLI declaration
tap-gong = 'tap_gong.tap:TapGong.cli'
